# ComputerVision

./: .gitignore  .gitmodules  CMakeLists.txt  CheckFunctionExists.cmake  Logger.h  README.md  buildCatchAfterPull.bat  final.cpp
Shaders/: Shader.h
assets/pixel/: calib.txt  detected_r.txt  test2.txt
calib/: Calib.cpp  Generate.cpp
lib/ODE/lib/: ode_doubled.lib
lib/ODE/lib/cmake/ode-0.15.2/: ode-config-version.cmake  ode-config.cmake  ode-export-debug.cmake  ode-export.cmake
lib/ODE/lib/pkgconfig/: ode.pc
lib/cv/: OpenCVConfig.cmake
lib/cv/x64/vc15/bin34/: opencv_highgui344.ilk
lib/cv/x64/vc15/lib/: OpenCVModules-debug.cmake  OpenCVModules-release.cmake  OpenCVModules.cmake  opencv_aruco320.lib  opencv_aruco320d.lib  opencv_bgsegm320.lib  opencv_bgsegm320d.lib  opencv_bioinspired320.lib  opencv_bioinspired320d.lib  opencv_calib3d320.lib  opencv_calib3d320d.lib  opencv_ccalib320.lib  opencv_ccalib320d.lib  opencv_core320.lib  opencv_core320d.lib  opencv_datasets320.lib  opencv_datasets320d.lib  opencv_dnn320.lib  opencv_dnn320d.lib  opencv_dpm320.lib  opencv_dpm320d.lib  opencv_face320.lib  opencv_face320d.lib  opencv_features2d320.lib  opencv_features2d320d.lib  opencv_flann320.lib  opencv_flann320d.lib  opencv_fuzzy320.lib  opencv_fuzzy320d.lib  opencv_highgui320.lib  opencv_highgui320d.lib  opencv_imgcodecs320.lib  opencv_imgcodecs320d.lib  opencv_imgproc320.lib  opencv_imgproc320d.lib  opencv_line_descriptor320.lib  opencv_line_descriptor320d.lib  opencv_ml320.lib  opencv_ml320d.lib  opencv_objdetect320.lib  (+45 more)
lib/cv/x64/vc15/lib34/: opencv_aruco344.exp  opencv_aruco344.lib  opencv_calib3d344.exp  opencv_calib3d344.lib  opencv_core344.exp  opencv_core344.lib  opencv_dnn344.exp  opencv_dnn344.lib  opencv_features2d344.exp  opencv_features2d344.lib  opencv_flann344.exp  opencv_flann344.lib  opencv_highgui344.exp  opencv_highgui344.lib  opencv_imgcodecs344.exp  opencv_imgcodecs344.lib  opencv_imgproc344.exp  opencv_imgproc344.lib  opencv_ml344.exp  opencv_ml344.lib  opencv_objdetect344.exp  opencv_objdetect344.lib  opencv_photo344.exp  opencv_photo344.lib  opencv_shape344.exp  opencv_shape344.lib  opencv_stitching344.exp  opencv_stitching344.lib  opencv_superres344.exp  opencv_superres344.lib  opencv_video344.exp  opencv_video344.lib  opencv_videoio344.exp  opencv_videoio344.lib  opencv_videostab344.exp  opencv_videostab344.lib
lib/glew/: GLEWConfig.cmake
lib/glfw/: glfw3config.cmake  glfwconfig.cmake
src/: Axis.h  CVLogger.h  Colors.h  Console.h  File.h  Helper.h  Logger.h  Perf.h  Timer.h  final.cpp
src/Aruco/: Aruco.h  ArucoFrame.h  ArucoTag.h
src/Buffer/: DeviceBuffer.h  FrameBuffer.h  VertexBuffer.h
src/Handy/: FingerCount.cpp  FingerCount.h  main.cpp
src/Objects/: Aruco.h  Axis.h  Camera.h  Cube.h  Grid.h  Object.h  PhysObject.h  Screen.h  World.h
src/Shaders/: Shader.h  ShaderProgram.h
